# histological-image-analysis

./: (Clone) ft_sentence_transformer.ipynb  .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  step9_finetune_coarse-2.ipynb  step9_finetune_coarse-3.ipynb  verify_model.py
docs/: complete_api_reference_dinov.md  data_download_plan.md  data_download_plan_human.md  databricks_connectivity.md  databricks_operations_guide.md  dinov2_model_research.md  experimental_results.md  finetuning_recommendations.md  human_data_search_directions.md  human_data_search_results.md  human_paper_draft.md  joyful-popping-planet.md  model_download_guide.md  mouse_model_findings.md  paper_draft.md  progress.md  references.md  step10_gpu_memory_review.md  step10_plan.md  step11_plan.md  step11b_plan.md  step11c_plan.md  step12_plan.md  step13_human_training_plan.md  step14_finishing_plan.md  step15_cli_annotator_plan.md  step16_cli_annotator_context.md  step17_vsi_support_plan.md  step18_hf_upload_fix.md  step5_6_completion_report.md  step7_dataset_model_decision.md  step7_paper_plan.md  step8_implementation_plan.md  step8_training_data_pipeline.md
exploration/: allen_brain_data_explorer.ipynb  databricks_connectivity_check.ipynb  getting_started_medical_imaging_fiftyone (2).ipynb
notebooks/: eval_human_depth3_test.ipynb  finetune_final_200ep.ipynb  finetune_human_allen.ipynb  finetune_human_allen_depth3.ipynb  finetune_human_bigbrain.ipynb  finetune_pruned_ablation.ipynb  finetune_pruned_multiaxis.ipynb  generate_human_paper_figures.ipynb  generate_paper_figures.ipynb  local_inference.ipynb  remove_first_week_chat_traces.ipynb  step10_finetune_depth2.ipynb  step10_finetune_full.ipynb  step10_full_single_gpu.ipynb  step9_finetune_coarse.ipynb  upload_models_to_hf.ipynb  upload_papers_to_hf.ipynb
(+48 files in other folders)
